--- a/public/frontend/css/styles.css
+++ b/public/frontend/css/styles.css
@@ -7018,3 +7018,33 @@ form .stars span {
       background: #eee;
   }
 }
+
+/*Developer Css*/
+.header_copy_searchbox {
+  width: 80% !important;
+  padding-left: 10px !important;
+  border: 1px solid #cccccc !important;
+  border-radius: 4px !important;
+  margin-left: 150px !important;
+}
+@media (max-width: 768px) {
+  .header_copy_searchbox{
+    width: 75% !important;
+    margin-left: 65px !important;
+  }
+}
+
+.header_searchbox {
+  width: 80% !important;
+  padding-left: 10px !important;
+  border: 1px solid #cccccc !important;
+  border-radius: 4px !important;
+  margin-left: 110px !important;
+}
+@media (max-width: 768px) {
+  .header_searchbox{
+    width: 75% !important;
+    margin-left: 55px !important;
+  }
+}
+.invalid-feedback strong{color:red!important;}
