--- a/public/frontend/css/new-css.css
+++ b/public/frontend/css/new-css.css
@@ -149,16 +149,87 @@ textarea:focus {
 }
 
 
+/*Editor Form*/
 
 
+.cs_form {
+    border: 1px solid #ddd;
+    /* padding: 0px 15px; */
+}
+.cs_form_header {
+    padding-top: 20px;
+    padding-bottom: 10px;
+    border-bottom: 2px solid #ddd;
+    padding-left: 15px;
+}
+.cs_form_header p {
+    color: #847f7f;
+    font-size: 18px;
+}
+mark, .mark {
+    padding: .2em;
+    background-color: #ce3f5121;
+    padding-left: 10px;
+    border-radius: 3px;
+    font-size: 13px;
+    margin-right: 50px;
+}
+.mark i{
+    margin-right: 5px;
+}
+.form_header {
+    border-bottom: 1px solid #ddd;
+    padding-top: 10px;
+    padding-left: 15px;
+    margin-bottom: 10px;
+}
+.form_header span,label span{
+    color: red;
+}
+.form_editor {
+    border-bottom: 1px solid #ddd;
+     margin-left: 15px;
+    margin-right: 15px;
+}
+..mce-notification.mce-has-close {
+    padding-right: 15px;
+    display: none !important;
+}
+.form_bottom{
+    padding:15px;
+}
+.file_input {
+    margin-bottom: 15px;
+}
+.file_input input{
+    width: 0%;
+}
 
+input.form_email_fd {
+    width: 100%;
+    height: 45px;
+    margin-top: 10px;
+    margin-bottom: 15px;
+    box-shadow: inset 0 0 2px 1px #b5b5b5;
+    border: 1px solid #b5b5b5;
+}
+span.email_bttm_txt {
+    color: #656565;
+    font-size: 13px;
+}
 
-
-
-
-
-
-
+button.cs_submit_btn {
+    background: #ce3f51;
+    color: #fff;
+    font-size: 14px;
+    padding: 8px 25px;
+    border: 1px solid #cd2129;
+    border-radius: 5px;
+}
+span.cs_chkbx {
+    color: #969494;
+    font-size: 13px;
+}
 /* ===================================
 = Responsive CSS
 ====================================*/
@@ -225,7 +296,18 @@ textarea:focus {
     }
 }
 
-@media screen and (max-width: 767px) and (min-width: 414px){
+@media screen and (max-width: 767px) and (min-width: 200px){
+    .cs_form_header p {
+    color: #847f7f;
+    font-size: 14px;
+}
+mark, .mark {
+    font-size: 10px;
+    margin-right: 15px;
+}
+}
+
+    @media screen and (max-width: 767px) and (min-width: 414px){
     .single-showcase {
         width: 44.8%;
         margin: 0 10px 30px;
@@ -234,6 +316,8 @@ textarea:focus {
     .showcase-img {
         height: 160px;
     }
+
+
 }
 
 @media screen and (max-width: 992px) and (min-width: 768px){    
